Settings and Commands framework

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,7 @@ lib_deps =
 	fastled/FastLED@3.5.0
 	kosme/arduinoFFT@^1.6.0
 	ropg/ezTime@0.8.3
+	links2004/WebSockets@^2.4.1
 platform_packages = 
 	toolchain-atmelavr@>=1.70300.0
 monitor_speed = 115200
